--- a/style.css
+++ b/style.css
@@ -35,3 +35,25 @@ section{
     background-image: url(top-banner.png);
 background-repeat: no-repeat;
 }
+.half wi{
+    width: 50%;
+    padding: 20px 30px;
+    display: flex;
+}
+.dream{
+    background-image: url(dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+h2{
+    font-size: 40px;
+    font-style: initial;
+    color: rgb(250, 93, 20);
+}
+.be{
+    color: rgb(30, 30, 216);
+}
+.po{
+    color: rgb(38, 17, 228);
+    
+}
