--- a/style.css
+++ b/style.css
@@ -1,59 +1,50 @@
 H1{
-font-size: xx-large;
-}
-body{
-    font-family: 'Oswald', sans-serif;
-    margin: 0%;
-font-family: 'Poppins', sans-serif;
-}
-.name{
-    color: coral;
-}
-h3{
-    font-weight: 30px;
-}
-section{
-    display: flex;
-}
-.HALF{
-    width: 50%;
-    padding-left: 3%;
-    padding-right: 3%;
-}
-.HALF img{
-    width: 100%;
-}
-.link{
-    text-decoration: none;
-  background-image: linear-gradient(orange,tomato);
-  font-weight: 700;
-    padding: 10px 40px;
-    border-radius: 5px;
-    color: hsl(48, 100%, 93%);
-}
-.top{
-    background-image: url(top-banner.png);
-background-repeat: no-repeat;
-}
-.half wi{
-    width: 50%;
-    padding: 20px 30px;
-    display: flex;
-}
-.dream{
-    background-image: url(dream-bg.png);
-    background-repeat: no-repeat;
-    background-position: right;
-}
-h2{
-    font-size: 40px;
-    font-style: initial;
-    color: rgb(250, 93, 20);
-}
-.be{
-    color: rgb(30, 30, 216);
-}
-.po{
-    color: rgb(38, 17, 228);
-    
-}
+    font-size: xx-large;
+    }
+    body{
+        font-family: 'Oswald', sans-serif;
+        margin: 0%;
+    }
+    .name{
+        color: coral;
+    }
+    h2{
+        font-weight: 30px;
+    }
+    .top{
+        background-image: url(top-banner.png);
+        background-repeat: no-repeat;
+        display: flex;
+        }
+        .hal{
+            width: 100%;
+            padding-left: 3%;
+            padding-right: 3%;
+           }
+    .hal img{
+        width: 70%;
+    }
+    .link{
+        text-decoration: none;
+      background-image: linear-gradient(orange,tomato);
+      font-weight: 700;
+        padding: 10px 40px;
+        border-radius: 5px;
+        color: hsl(48, 100%, 93%);
+    }
+    .dream{
+        background-image: url(dream-bg.png);
+        background-repeat: no-repeat;
+        background-position: right;
+    }
+    h2{
+        font-size: 40px;
+        font-style: initial;
+        color: rgb(250, 93, 20);
+    }
+    .be{
+        color: rgb(30, 30, 216);
+    }
+    .po{
+        color: rgb(38, 17, 228);   
+    }
